# ni-maschine-mk3-fl

./: .editorconfig  .gitignore  LICENSE  README.md  build  build.cmd  build.py  build.sh  pyproject.toml
.github/workflows/: format.yml
controller_editor/: FL_Studio.ncm3
docs/: developer_guide.md  user_guide.md
scripts/: build.py
src/: colors.py  consts.py  controller.py  controls.py  enums.py  main.py  notes.py  pads.py  utilities.py
